test/parser/decl_stmt.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:20: error: expected ';' after declaration
    let x: i32 = 0 |;

    // CHECK: [[# @LINE + 1 ]]:9: error: expected identifier
    let ;

    // CHECK: [[# @LINE + 1 ]]:11: error: expected type expression
    let x:;

    // CHECK: [[# @LINE + 1 ]]:17: error: expected expression
    let x: i32 =;

    let x;
    // CHECK: DeclStmt
    // CHECK-NEXT:   VarDecl: x

    let x: i32;
    // CHECK: DeclStmt
    // CHECK-NEXT:   VarDecl:i32 x
    
    let x: i32 = 1;
    // CHECK: DeclStmt
    // CHECK-NEXT:   VarDecl:i32 x
    // CHECK-NEXT:     IntLiteral '1'
}
